--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
                         <ul>
                             <li>Cisco IT Essentials</li>
-                            <li>Life skills, Health/ Reproductive health</li>
+                            <li>Life skill, Health/ Reproductive health</li>
                             <li>Web design(HTML)</li>
                             <li>Online work (Tukoworks and Upwork)</li>
                             <li>Digital literacy and Fundamentals (Microsoft IT Academy)</li>
